k8-manifest/myapp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: gcr.io/w9-challenge/myapp:v0.1.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gcr-secret
